[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/PurpleBoy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PinkGirl.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/BlueBoy.tscn" type="PackedScene" id=4]
[ext_resource path="res://FloorSet.tres" type="TileSet" id=5]
[ext_resource path="res://fonts/LCD-N___.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/lcd_lcd_mono/LCDMonoWinTT/LCDMU___.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://TileSet.tres" type="TileSet" id=8]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/TrashCan.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
spawn_amount = 10
spawn_area = 100
Partiers = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]
time_limit = 3000

[node name="Clock" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="FloorMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -720904, 7, 0, -720903, 7, 0, -720902, 7, 0, -720901, 7, 0, -720900, 7, 0, -720899, 7, 0, -720898, 7, 0, -720897, 7, 0, -786432, 7, 0, -786431, 7, 0, -786430, 7, 0, -786429, 7, 0, -786428, 7, 0, -786427, 7, 0, -786426, 7, 0, -786425, 7, 0, -655368, 7, 0, -655367, 8, 0, -655366, 8, 0, -655365, 8, 0, -655364, 8, 0, -655363, 8, 0, -655362, 8, 0, -655361, 8, 0, -720896, 8, 0, -720895, 8, 0, -720894, 8, 0, -720893, 8, 0, -720892, 8, 0, -720891, 8, 0, -720890, 8, 0, -720889, 7, 0, -589832, 7, 0, -589831, 8, 0, -589830, 8, 0, -589829, 8, 0, -589828, 8, 0, -589827, 8, 0, -589826, 8, 0, -589825, 8, 0, -655360, 8, 0, -655359, 8, 0, -655358, 8, 0, -655357, 8, 0, -655356, 8, 0, -655355, 8, 0, -655354, 8, 0, -655353, 7, 0, -524296, 7, 0, -524295, 8, 0, -524294, 8, 0, -524293, 8, 0, -524292, 8, 0, -524291, 8, 0, -524290, 8, 0, -524289, 8, 0, -589824, 8, 0, -589823, 8, 0, -589822, 8, 0, -589821, 8, 0, -589820, 8, 0, -589819, 8, 0, -589818, 8, 0, -589817, 7, 0, -458760, 7, 0, -458759, 8, 0, -458758, 8, 0, -458757, 8, 0, -458756, 8, 0, -458755, 8, 0, -458754, 8, 0, -458753, 8, 0, -524288, 8, 0, -524287, 8, 0, -524286, 8, 0, -524285, 8, 0, -524284, 8, 0, -524283, 8, 0, -524282, 8, 0, -524281, 7, 0, -393230, 7, 0, -393229, 7, 0, -393228, 7, 0, -393227, 7, 0, -393226, 7, 0, -393225, 7, 0, -393224, 7, 0, -393223, 8, 0, -393222, 8, 0, -393221, 8, 0, -393220, 8, 0, -393219, 8, 0, -393218, 8, 0, -393217, 8, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 7, 0, -458744, 7, 0, -458743, 7, 0, -458742, 7, 0, -458741, 7, 0, -458740, 7, 0, -458739, 7, 0, -327694, 7, 0, -327693, 8, 0, -327692, 8, 0, -327691, 8, 0, -327690, 8, 0, -327689, 8, 0, -327688, 8, 0, -327687, 8, 0, -327686, 8, 0, -327685, 8, 0, -327684, 8, 0, -327683, 8, 0, -327682, 8, 0, -327681, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 8, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -393205, 8, 0, -393204, 8, 0, -393203, 7, 0, -262158, 7, 0, -262157, 8, 0, -262156, 8, 0, -262155, 8, 0, -262154, 8, 0, -262153, 8, 0, -262152, 8, 0, -262151, 8, 0, -262150, 8, 0, -262149, 8, 0, -262148, 8, 0, -262147, 8, 0, -262146, 8, 0, -262145, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 7, 0, -196622, 7, 0, -196621, 8, 0, -196620, 8, 0, -196619, 8, 0, -196618, 8, 0, -196617, 8, 0, -196616, 8, 0, -196615, 8, 0, -196614, 8, 0, -196613, 8, 0, -196612, 8, 0, -196611, 8, 0, -196610, 8, 0, -196609, 8, 0, -262144, 8, 0, -262143, 8, 0, -262142, 8, 0, -262141, 8, 0, -262140, 8, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -262133, 8, 0, -262132, 8, 0, -262131, 7, 0, -131086, 7, 0, -131085, 8, 0, -131084, 8, 0, -131083, 8, 0, -131082, 8, 0, -131081, 8, 0, -131080, 8, 0, -131079, 8, 0, -131078, 8, 0, -131077, 8, 0, -131076, 8, 0, -131075, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -196595, 7, 0, -65550, 7, 0, -65549, 8, 0, -65548, 8, 0, -65547, 8, 0, -65546, 8, 0, -65545, 8, 0, -65544, 8, 0, -65543, 8, 0, -65542, 8, 0, -65541, 8, 0, -65540, 8, 0, -65539, 8, 0, -65538, 8, 0, -65537, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 7, 0, -14, 7, 0, -13, 8, 0, -12, 8, 0, -11, 8, 0, -10, 8, 0, -9, 8, 0, -8, 8, 0, -7, 8, 0, -6, 8, 0, -5, 8, 0, -4, 8, 0, -3, 8, 0, -2, 8, 0, -1, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, -65532, 8, 0, -65531, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 7, 0, 65522, 7, 0, 65523, 8, 0, 65524, 8, 0, 65525, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 0, 65529, 8, 0, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 7, 0, 131058, 7, 0, 131059, 8, 0, 131060, 8, 0, 131061, 8, 0, 131062, 8, 0, 131063, 8, 0, 131064, 8, 0, 131065, 8, 0, 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 7, 0, 196594, 7, 0, 196595, 8, 0, 196596, 8, 0, 196597, 8, 0, 196598, 8, 0, 196599, 8, 0, 196600, 8, 0, 196601, 8, 0, 196602, 8, 0, 196603, 8, 0, 196604, 8, 0, 196605, 8, 0, 196606, 8, 0, 196607, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 7, 0, 262130, 7, 0, 262131, 8, 0, 262132, 8, 0, 262133, 8, 0, 262134, 8, 0, 262135, 8, 0, 262136, 8, 0, 262137, 8, 0, 262138, 8, 0, 262139, 8, 0, 262140, 8, 0, 262141, 8, 0, 262142, 8, 0, 262143, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 7, 0, 327666, 7, 0, 327667, 7, 0, 327668, 7, 0, 327669, 7, 0, 327670, 7, 0, 327671, 7, 0, 327672, 7, 0, 327673, 7, 0, 327674, 7, 0, 327675, 7, 0, 327676, 7, 0, 327677, 8, 0, 327678, 8, 0, 327679, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 7, 0, 262148, 7, 0, 262149, 7, 0, 262150, 7, 0, 262151, 7, 0, 262152, 7, 0, 262153, 7, 0, 262154, 7, 0, 262155, 7, 0, 262156, 7, 0, 262157, 7, 0, 393212, 7, 0, 393213, 7, 0, 393214, 7, 0, 393215, 7, 0, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MoneyLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Cash  $0"
align = 2

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 250.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Score 0"

[node name="ComplaintsLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.0
margin_top = 38.0
margin_right = -20.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
text = "Complaints 0/10"
align = 2

[node name="TimeLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.0
margin_top = 56.0
margin_right = -20.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 1 )
text = "Time 1 AM"
align = 2

[node name="FadeRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.06, 0.06, 0.06, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -25.0
margin_right = 38.0
margin_bottom = 18.5
text = "GAME OVER"

[node name="GameOverSubLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -4.5
margin_right = 50.0
margin_bottom = 4.5
custom_fonts/font = SubResource( 2 )
text = "Your party was shut down!"
align = 1

[node name="YSort" type="YSort" parent="."]

[node name="ObjectMap" type="TileMap" parent="YSort"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -393219, 7, 0, -458750, 7, 0, -327676, 5, 0, -196614, 4, 0, -131083, 4, 0, -196598, 5, 0, 196606, 6, 0, 131074, 6, 0 )

[node name="Player" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 16, -16 )

[node name="TrashCan2" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 144, 48 )

[node name="TrashCan" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -144, 48 )
[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
